--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_aparelhos">AparelhosActivity</string>
     <string name="title_activity_area_consumo">AreaConsumoActivity</string>
     <string name="title_activity_areas">AreasActivity</string>
+    <string name="title_activity_aparelho">AparelhoActivity</string>
 </resources>
